// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toggle > renders and click on toggle on 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
      for="_r_1s_"
    >
      <div
        class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      >
        <div
          class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
          style="--_85qyp70: auto 1fr; --_85qyp71: auto 1fr; --_85qyp72: auto 1fr; --_85qyp73: auto 1fr; --_85qyp74: auto 1fr; --_85qyp75: auto 1fr;"
        >
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
            for="_r_1s_"
          >
            labelName
          </span>
        </div>
      </div>
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="styles__adn1w28"
          id="_r_1s_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
      for="_r_0_"
    >
      <div
        class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      />
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="styles__adn1w28"
          id="_r_0_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
      for="_r_10_"
    >
      <div
        class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      >
        <div
          class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
          style="--_85qyp70: auto 1fr; --_85qyp71: auto 1fr; --_85qyp72: auto 1fr; --_85qyp73: auto 1fr; --_85qyp74: auto 1fr; --_85qyp75: auto 1fr;"
        >
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
            for="_r_10_"
          >
            This is a label
          </span>
        </div>
      </div>
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="styles__adn1w28"
          id="_r_10_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly when checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
      for="_r_4_"
    >
      <div
        class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      />
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          checked=""
          class="styles__adn1w28"
          id="_r_4_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly when disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="true"
      class="styles__adn1w29 styles_disabled_true__adn1w2b styles_labelPosition_right__adn1w2d"
      for="_r_8_"
    >
      <div
        class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      />
      <div
        class="styles__adn1w20 styles_disabled_true__adn1w22 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-disabled="true"
          aria-invalid="false"
          class="styles__adn1w28"
          disabled=""
          id="_r_8_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly when required with label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
      for="_r_c_"
    >
      <div
        class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      >
        <div
          class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
          style="--_85qyp70: auto 1fr; --_85qyp71: auto 1fr; --_85qyp72: auto 1fr; --_85qyp73: auto 1fr; --_85qyp74: auto 1fr; --_85qyp75: auto 1fr;"
        >
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
            for="_r_c_"
          >
            test
          </span>
          <sup
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_danger__1do42ls9 style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_48__1do42ls2m"
          >
            *
          </sup>
        </div>
      </div>
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="styles__adn1w28"
          id="_r_c_"
          name="test"
          required=""
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly when required with label left 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_left__adn1w2c"
      for="_r_k_"
    >
      <div
        class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      >
        <div
          class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
          style="--_85qyp70: auto 1fr; --_85qyp71: auto 1fr; --_85qyp72: auto 1fr; --_85qyp73: auto 1fr; --_85qyp74: auto 1fr; --_85qyp75: auto 1fr;"
        >
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
            for="_r_k_"
          >
            test
          </span>
          <sup
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_danger__1do42ls9 style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_48__1do42ls2m"
          >
            *
          </sup>
        </div>
      </div>
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="styles__adn1w28"
          id="_r_k_"
          name="test"
          required=""
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with complex label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
      for="_r_1o_"
    >
      <div
        class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      >
        <div
          class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
          style="--_85qyp70: auto 1fr; --_85qyp71: auto 1fr; --_85qyp72: auto 1fr; --_85qyp73: auto 1fr; --_85qyp74: auto 1fr; --_85qyp75: auto 1fr;"
        >
          <span>
            Custom label rendered
          </span>
        </div>
      </div>
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="styles__adn1w28"
          id="_r_1o_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with custom labels on right 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
      for="_r_1i_"
    >
      <div
        class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      >
        <div
          class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
          style="--_85qyp70: auto 1fr; --_85qyp71: auto 1fr; --_85qyp72: auto 1fr; --_85qyp73: auto 1fr; --_85qyp74: auto 1fr; --_85qyp75: auto 1fr;"
        >
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
            for="_r_1i_"
          >
            This is a label
          </span>
        </div>
      </div>
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="styles__adn1w28"
          id="_r_1i_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
      for="_r_2a_"
    >
      <div
        class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      >
        <div
          class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
          style="--_85qyp70: auto 1fr; --_85qyp71: auto 1fr; --_85qyp72: auto 1fr; --_85qyp73: auto 1fr; --_85qyp74: auto 1fr; --_85qyp75: auto 1fr;"
        >
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
            for="_r_2a_"
          >
            This is a label
          </span>
        </div>
        <span
          class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_danger__1do42ls9 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a style_undefined_compound_48__1do42ls2m"
          id="_r_2b_"
          role="status"
        >
          error text
        </span>
      </div>
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_true__adn1w24 styles_size_large__adn1w25"
      >
        <input
          aria-describedby="_r_2b_"
          aria-disabled="false"
          aria-invalid="true"
          class="styles__adn1w28"
          id="_r_2a_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with helper 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
      for="_r_22_"
    >
      <div
        class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      >
        <div
          class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
          style="--_85qyp70: auto 1fr; --_85qyp71: auto 1fr; --_85qyp72: auto 1fr; --_85qyp73: auto 1fr; --_85qyp74: auto 1fr; --_85qyp75: auto 1fr;"
        >
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
            for="_r_22_"
          >
            This is a label
          </span>
        </div>
        <span
          class="style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_caption__1do42lsp style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          id="_r_23_"
          role="status"
        >
          This is a helper
        </span>
      </div>
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-describedby="_r_23_"
          aria-disabled="false"
          aria-invalid="false"
          class="styles__adn1w28"
          id="_r_22_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with labels on left 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_left__adn1w2c"
      for="_r_1c_"
    >
      <div
        class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      >
        <div
          class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
          style="--_85qyp70: auto 1fr; --_85qyp71: auto 1fr; --_85qyp72: auto 1fr; --_85qyp73: auto 1fr; --_85qyp74: auto 1fr; --_85qyp75: auto 1fr;"
        >
          <span
            class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
            for="_r_1c_"
          >
            This is a label
          </span>
        </div>
      </div>
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="styles__adn1w28"
          id="_r_1c_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with non default size 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <label
      aria-disabled="false"
      class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
      for="_r_s_"
    >
      <div
        class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
      />
      <div
        class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_small__adn1w26"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="styles__adn1w28"
          id="_r_s_"
          name="test"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;

exports[`toggle > renders correctly with tooltip 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1y5sygv5"
    >
      <label
        aria-disabled="false"
        class="styles__adn1w29 styles_disabled_false__adn1w2a styles_labelPosition_right__adn1w2d"
        for="_r_16_"
      >
        <div
          class="styles__xf61n40 styles_alignItems_baseline_xxsmall__xf61n41j styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.125rem_xxsmall__xf61n45d"
        >
          <div
            class="styles__1w3vbem0 styles_alignItems_center_xxsmall__1w3vbemd styles_gap_0.5rem_xxsmall__1w3vbem2j"
            style="--_85qyp70: auto 1fr; --_85qyp71: auto 1fr; --_85qyp72: auto 1fr; --_85qyp73: auto 1fr; --_85qyp74: auto 1fr; --_85qyp75: auto 1fr;"
          >
            <span
              class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              for="_r_16_"
            >
              This is a label
            </span>
          </div>
        </div>
        <div
          class="styles__adn1w20 styles_disabled_false__adn1w21 styles_error_false__adn1w23 styles_size_large__adn1w25"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="styles__adn1w28"
            id="_r_16_"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;
